Adapt to change in coxe.

--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,3 @@
 <html>
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://conifer.cs.brown.edu/s6.old/search.html">
+<meta HTTP-EQUIV="REFRESH" content="0; url=http://conifer2.cs.brown.edu/s6.old/search.html">
 </html>
-
-
-
-
-
-
